--- a/package.json
+++ b/package.json
@@ -22,19 +22,31 @@
   ],
   "homepage": "https://snowman.io",
   "license": "MIT",
-  "main": "src/index.js",
+  "bin": {
+    "snowman": "./bin/snowman"
+  },
+  "main": "lib/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/darryl-snow/snowman.git"
   },
-  "devDependencies": {
-    "karma": "^0.13.22",
-    "karma-jasmine": "^0.3.8",
-    "karma-phantomjs-launcher": "^1.0.0"
+  "devDependencies": {},
+  "dependencies": {
+    "bluebird": "^3.3.5",
+    "events": "^1.1.0",
+    "glob": "^7.0.3",
+    "graceful-fs": "^4.1.3",
+    "lodash": "^4.10.0",
+    "log4js": "^0.6.33",
+    "minimatch": "^3.0.0",
+    "optimist": "^0.6.1",
+    "path": "^0.12.7",
+    "readline": "^1.3.0",
+    "useragent": "^2.1.9",
+    "util": "^0.10.3"
   },
-  "dependencies": {},
   "scripts": {
-    "start": "",
+    "start": "./bin/snowman",
     "test": "karma start"
   }
 }
